--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'quicksand', sans-serif;
     /* font-family: 'Orbitron', sans-serif; */
     /* font-family: 'Oxanium', cursive; */
     /* font-family: 'Poppins', sans-serif; */
